RAS-386: resolve get help link

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -52,6 +52,10 @@ microservice {
 
     services {
 
+        contact-frontend {
+            host = localhost
+            port = 9250
+        }
     }
 }
 
