RAS-403: Creating matching connector

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -69,6 +69,11 @@ microservice {
             host = localhost
             port = 9250
         }
+
+        customer-matching {
+            host = localhost
+            port = 9671
+        }
     }
 }
 
