RAS-403: Wiring up the ras connector

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -74,6 +74,11 @@ microservice {
             host = localhost
             port = 9671
         }
+
+        ras {
+            host = localhost
+            port = 9669
+        }
     }
 }
 
