RAS-403:Add cache config:

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -79,6 +79,17 @@ microservice {
             host = localhost
             port = 9669
         }
+
+        cachable {
+            session-cache {
+                domain = keystore
+            }
+        }
+
+        keystore {
+            host = localhost
+            port = 8400
+        }
     }
 }
 
