RAS-61- config changes for authrisation -incomplete

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,12 +42,31 @@ play.http.requestHandler = "play.api.http.GlobalSettingsHttpRequestHandler"
 
 controllers {
 
+  authorisation {
+    ras = {
+      patterns = [
+        "/relief-at-source/member-details"
+        "/relief-at-source/match-found"
+        "/relief-at-source/match-not-found"
+      ]
+      predicates = [{
+        authProviders = ["GovernmentGateway"]
+        enrolment = ["HMRC-PP-ORG","HMRC-PSA-ORG"]
+      }]
+    }
+  }
+
     com.kenshoo.play.metrics.MetricsController = {
         needsAuth = false
         needsLogging = false
         needsAuditing = false
     }
 
+  controllers.MemberDetailsController = {
+    authorisedBy = ["ras"]
+    needsLogging = false
+    needsAuditing = false
+  }
     controllers {
         Assets.needsAuditing = false
     }
