RAS-61- config changes for authrisation - updates to config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,7 +43,7 @@ play.http.requestHandler = "play.api.http.GlobalSettingsHttpRequestHandler"
 controllers {
 
   authorisation {
-    ras = {
+    psa = {
       patterns = [
         "/relief-at-source/member-details"
         "/relief-at-source/match-found"
@@ -51,7 +51,18 @@ controllers {
       ]
       predicates = [{
         authProviders = ["GovernmentGateway"]
-        enrolment = ["HMRC-PP-ORG","HMRC-PSA-ORG"]
+        enrolment = "HMRC-PSA-ORG"
+      }]
+    }
+    pp = {
+      patterns = [
+        "/relief-at-source/member-details"
+        "/relief-at-source/match-found"
+        "/relief-at-source/match-not-found"
+      ]
+      predicates = [{
+        authProviders = ["GovernmentGateway"]
+        enrolment = "HMRC-PP-ORG"
       }]
     }
   }
@@ -63,7 +74,7 @@ controllers {
     }
 
   controllers.MemberDetailsController = {
-    authorisedBy = ["ras"]
+    authorisedBy = ["psa", "pp"]
     needsLogging = false
     needsAuditing = false
   }
@@ -84,7 +95,12 @@ microservice {
 
     services {
 
-        contact-frontend {
+      auth {
+        host=localhost
+        port=8500
+      }
+
+      contact-frontend {
             host = localhost
             port = 9250
         }
