RAS-61- authorisation code final version with authorised functions

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,7 +47,21 @@ controllers {
         needsLogging = false
         needsAuditing = false
     }
-
+  controllers.RasController = {
+    needsAuth = false
+    needsLogging = false
+    needsAuditing = false
+  }
+  controllers.MemberDetailsController = {
+    needsAuth = false
+    needsLogging = false
+    needsAuditing = false
+  }
+  controllers.ResultsController = {
+    needsAuth = false
+    needsLogging = false
+    needsAuditing = false
+  }
     controllers {
         Assets.needsAuditing = false
     }
@@ -64,6 +78,10 @@ microservice {
     }
 
     services {
+      auth {
+        host = localhost
+        port = 8500
+      }
 
         contact-frontend {
             host = localhost
