RAS-484: Add session cache

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -78,10 +78,22 @@ microservice {
     }
 
     services {
-      auth {
-        host = localhost
-        port = 8500
-      }
+
+        cachable {
+            session-cache {
+                domain = keystore
+            }
+        }
+
+        keystore {
+            host = localhost
+            port = 8400
+        }
+
+        auth {
+          host = localhost
+          port = 8500
+        }
 
         contact-frontend {
             host = localhost
