RAS-501: Add sign out link to the top of page

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -149,6 +149,13 @@ assets {
   url = "http://localhost:9032/assets/"
 }
 
+ca-frontend {
+    host = "http://localhost:9025"
+}
+
+gg-urls {
+  logout-callback.url = "http://localhost:9673/relief-at-source/start"
+}
 
 customer-matching-environment-suffix = "match"
 customer-matching-links-suffix = "matched"
