RAS-501: Refactor back link

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -154,7 +154,7 @@ ca-frontend {
 }
 
 gg-urls {
-  logout-callback.url = "http://localhost:9673/relief-at-source/start"
+  logout-callback.url = "http://localhost:9673/relief-at-source/"
 }
 
 customer-matching-environment-suffix = "match"
