RAS-501-with-mongo

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -161,3 +161,8 @@ customer-matching-environment-suffix = "match"
 customer-matching-links-suffix = "matched"
 residency-status-url = "/relief-at-source/customer/%s/residency-status"
 
+play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoHmrcModule"
+
+mongodb {
+    uri = "mongodb://localhost:27017/ras-frontend"
+}
