RAS-127: Add metrics

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -124,7 +124,7 @@ metrics {
     durationUnit = SECONDS
     showSamples = true
     jvm = true
-    enabled = false
+    enabled = true
 }
 
 auditing {
