RAS-432: add file upload connector

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -110,6 +110,11 @@ microservice {
             port = 9671
         }
 
+        file-upload {
+            host = localhost
+            port = 8898
+        }
+
         relief-at-source {
             host = localhost
             port = 9669
@@ -160,4 +165,5 @@ gg-urls {
 customer-matching-environment-suffix = "match"
 customer-matching-links-suffix = "matched"
 residency-status-url = "/relief-at-source/customer/%s/residency-status"
+file-upload-url-suffix = "/file-upload/envelopes"
 
