--- a/conf/application.conf
+++ b/conf/application.conf
@@ -165,5 +165,5 @@ gg-urls {
 customer-matching-environment-suffix = "match"
 customer-matching-links-suffix = "matched"
 residency-status-url = "/relief-at-source/customer/%s/residency-status"
-file-upload-url-suffix = "/file-upload/envelopes"
+file-upload-url-suffix = "file-upload/envelopes"
 
