--- a/conf/application.conf
+++ b/conf/application.conf
@@ -115,6 +115,11 @@ microservice {
             port = 8898
         }
 
+        file-upload-frontend {
+            host = localhost
+            port = 8899
+        }
+
         relief-at-source {
             host = localhost
             port = 9669
@@ -166,4 +171,4 @@ customer-matching-environment-suffix = "match"
 customer-matching-links-suffix = "matched"
 residency-status-url = "/relief-at-source/customer/%s/residency-status"
 file-upload-url-suffix = "file-upload/envelopes"
-
+file-upload-frontend-upload = "file-upload/upload/envelopes"
