--- a/conf/application.conf
+++ b/conf/application.conf
@@ -125,6 +125,11 @@ microservice {
             port = 9669
         }
 
+        ras-frontend {
+            host = localhost
+            port = 9673
+        }
+
     }
 }
 
@@ -167,7 +172,9 @@ gg-urls {
   logout-callback.url = "http://localhost:9673/relief-at-source/"
 }
 
+ras-frontend-url-suffix = "relief-at-source"
 customer-matching-environment-suffix = "match"
 customer-matching-links-suffix = "matched"
 residency-status-url = "/relief-at-source/customer/%s/residency-status"
 file-upload-url-suffix = "file-upload/envelopes"
+file-upload-frontend-url-suffix = "file-upload/upload/envelopes"
