RAS-587: add envelope parameters as config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -178,3 +178,10 @@ customer-matching-links-suffix = "matched"
 residency-status-url = "/relief-at-source/customer/%s/residency-status"
 file-upload-url-suffix = "file-upload/envelopes"
 file-upload-frontend-url-suffix = "file-upload/upload/envelopes"
+
+file-upload-constraints {
+    maxItems = 1
+    maxSize = "2MB"
+    maxSizePerItem = "2MB"
+    allowZeroLengthFiles = false
+}
