RAS-605 | Amended callback url for file upload to point to an endpoint on ras-api

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -178,6 +178,7 @@ customer-matching-links-suffix = "matched"
 residency-status-url = "/relief-at-source/customer/%s/residency-status"
 file-upload-url-suffix = "file-upload/envelopes"
 file-upload-frontend-url-suffix = "file-upload/upload/envelopes"
+file-upload-ras-callback-url = "/ras-api/file-processing/status"
 
 file-upload-constraints {
     maxItems = 1
